# codeflow-engine

./: .gitignore  CLAUDE.md  README.md
.azure/: pipeline-setup.md
.github/workflows/: ci.yml  deploy-autopr-engine.yml  deploy-website.yml  lint.yml  pr-comment-handler.yml  security.yml  validate-templates.yml
docs/: LEGACY_REPO_REDIRECTS.md
engine/: install.sh  pyproject.toml
engine/codeflow_engine/services/: comment_filter.py
engine/codeflow_engine/workflows/: error_handler_workflow.py
engine/tests/scripts/: test_install.bats
orchestration/: MIGRATION_PHASES.md  MIGRATION_SESSION_SUMMARY.md  NEXT_STEPS.md  README.md  codeflow.code-workspace
orchestration/infrastructure/: README.md
orchestration/infrastructure/bicep/: website-parameters.json
orchestration/infrastructure/terraform/runtime/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
orchestration/infrastructure/terraform/website/: README.md  backend.tf.example  main.tf  outputs.tf  providers.tf  variables.tf
orchestration/prompt-orchestration/: README.md
orchestration/prompt-orchestration/.github/workflows/: ci.yml
orchestration/prompt-orchestration/configs/: authority-model.yaml  phases.yaml  quality-gates.yaml
orchestration/prompt-orchestration/docs/: AI Tool Instruction Analysis & Phase Mappings.md
orchestration/prompt-orchestration/prompts/: meta-prompt.md  prompt-1-context.md  prompt-2-tech.md  prompt-3-audit.md  prompt-4-implement.md  prompt-5-post-review.md  prompt-6-repeat.md
orchestration/prompt-orchestration/schemas/: output-schema.json
orchestration/scripts/: verify-package-readiness.ps1
scripts/: setup-azure-auth-for-pipeline.ps1
tools/markdown_lint/: requirements.txt
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/docs/: RELEASE_GUIDE.md
vscode-extension/src/: extension.ts
website/app/: page.tsx
website/app/auth/: AuthCallback.tsx  AuthStart.tsx  oidc.ts
website/app/auth/__tests__/: AuthCallback.test.tsx
website/app/auth/callback/: page.tsx
website/app/components/: Header.tsx
website/app/login/: page.tsx
website/app/signup/: page.tsx
website/public/: staticwebapp.config.json
